--- a/css/site.css
+++ b/css/site.css
@@ -1,26 +1,30 @@
 /*    PÁGINA  =========================================== */
 
+body{
+  background-image: url("../files/back.png");
+  margin: 0;
+  width: 100%;
+}
 .js-page{
-  background-color: #222;
-  color: #FB0;
+  color: #FA0;
   width: 80%;
   margin: auto;
   padding: 50px 0px 50px 0px;
 }
 
 .js-page h1{
-  color: #FB0;
+  color: #FA0;
   font-family: sans-serif;
   font-weight: bold;
   font-size: 40pt;
   text-align: center;
-  border-bottom: 1px solid #FB0;
+  border-bottom: 1px solid #FA0;
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
 .js-page h2{
-  color: #FB0;
+  color: #FA0;
   font-family: sans-serif;
   font-weight: bold;
   font-size: 30pt;
@@ -44,7 +48,7 @@
 }
 
 .js-page hr{
-  border: #FB09 1px solid;
+  border: #FA09 1px solid;
   max-width: 50%;
   margin: 50px auto 50px auto;
 }
@@ -56,15 +60,16 @@
 
 
 /*    MENU DE NAVEGAÇÃO  =========================================== */
+
 .js-nav{
-  background-color: #0005;
-  box-shadow: 0px 0px 15px #FB08;
+  background-color: #0003;
+  box-shadow: 0px 0px 15px #FA08;
   backdrop-filter: blur(10px);
   width: 100%;
+  display: block;
   top: 0;
   left: 0;
   position: fixed;
-  height: auto;
 }
 
 .js-nav ul{
@@ -78,9 +83,9 @@
 
 .js-nav .active{
   background-color: black;
-  color: #FB0;
-  border-left: 2px solid #FB0;
-  border-right: 2px solid #FB0;
+  color: #FA0;
+  border-left: 2px solid #FA0;
+  border-right: 2px solid #FA0;
 }
 
 .js-nav li{
@@ -100,6 +105,22 @@
 }
 
 .js-nav a:hover{
-  background-color: #FB0;
+  background-color: #FA0;
   color: black;
+}
+
+
+
+
+
+
+
+
+/*    BANNER  =========================================== */
+
+.js-banner img{
+  width: 100%;
+  top: 0;
+  border-bottom: 5px solid #111;
+  pointer-events: none;
 }
