--- a/css/site.css
+++ b/css/site.css
@@ -199,7 +199,7 @@ body{
   position: fixed;
   background-color: #222;
   padding: 10px;
-  margin-top: 40px;
+  padding-top: 40px;
   z-index: 0;
   height: 90%;
   bottom: 0;
