--- a/css/site.css
+++ b/css/site.css
@@ -1,312 +1,13 @@
-/* #region IMPORTS */
-@font-face {
-  font-family: "Hubballi";
-  src: url("Hubballi-Regular.ttf");
-}
-@font-face {
-  font-family: "Tech";
-  src: url("ShareTechMono-Regular.ttf");
-}
-@font-face {
-  font-family: "Baloo";
-  src: url("BalooBhaijaan2-VariableFont_wght.ttf");
-}
-/* #endregion */
-
-
-/* #region PÁGINA ============================================================= */
-body{
-  background-image: url("../files/back.png");
-}
-
-.js-page{
-  color: #FA0;
-  width: 80%;
-  margin: auto;
-  padding: 50px 10px 50px 10px;
-}
-
-.blog{
-  padding-left: 250px;
-}
-.js-post-frame{
-  background-color: #222;
-  width: 100%;
-  border: none;
-  margin: auto;
-  margin-bottom: 50px;
-  border-bottom: #FA0 1px solid;
-  box-shadow: 0px 0px 15px #FA08;
-}
-
-.js-page h1{
-  color: #FA0;
-  font-size: 40pt;
-  font-family: Baloo;
-  font-weight: bold;
-  text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.js-page h2{
-  color: #FA0;
-  font-family: Baloo;
-  font-weight: bold;
-  font-size: 30pt;
-  text-align: center;
-}
-
-.js-page h3{
-  color: #ddd;
-  font-family: Baloo;
-  font-weight: bold;
-  font-size: 25pt;
-  text-align: left;
-}
-
-.js-page p{
-  font-size: x-large;
-  font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
-  color: #ddd;
-  text-align: justify;
-}
-
 .js-page li{
   color: #ddd;
   font-size: x-large;
   font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.js-page hr{
-  border: #FA09 1px solid;
-  margin: 50px auto 50px auto;
-}
-
-.js-button{
-  display: inline-block;
-  color: white;
-  background-color: #111;
-  border: #FA0 1px solid;
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
-  font-weight: bold;
+.js-post code{
+  display: block;
+  color: cyan;
   font-size: large;
-  font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Tech, 'Courier New', Courier, monospace;
+  margin-left: 60px;
 }
-.js-button:hover{
-  color: black;
-  background-color: #FA0;
-}
-
-.js-top-button{
-  bottom: 0;
-  right: 0;
-  position: fixed;
-  display: block;
-  margin: 15px;
-}
-.js-top-button a{
-  font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
-  padding: 10px;
-  font-size: xx-large;
-  color: #FA0;
-}
-.js-top-button a:hover{
-  background-color: #FA0;
-  color: black;
-}
-/* #endregion PÁGINA ==================================*/
-
-
-/* #region MENU DE NAVEGAÇÃO  =========================================== */
-
-.js-nav{
-  background-color: #0007;
-  box-shadow: 0px 0px 15px #FA08;
-  backdrop-filter: blur(100px);
-  width: 100%;
-  display: block;
-  top: 0;
-  left: 0;
-  position: fixed;
-  z-index: 1000;
-}
-
-.js-nav ul{
-  list-style-type: none;
-  margin-top: 0;
-}
-
-.js-nav .right{
-  float: right;
-}
-
-.js-nav .active{
-  background-color: black;
-  color: #FA0;
-  border-left: 3px solid #FA0;
-  border-right: 3px solid #FA0;
-}
-
-.js-nav li{
-  float: left;
-}
-
-.js-nav a{
-  display: block;
-  color: white;
-  padding: 10px 15px 10px 15px;
-  text-decoration: none;
-  font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: bold;
-  font-size: medium;
-  max-height: 40px;
-}
-
-.js-nav a:hover{
-  background-color: #FA0;
-  color: black;
-}
-
-.js-drop-button{
-  display: block;
-}
-
-.js-drop-content{
-  display: none;
-  position: absolute;
-  background-color: #000D;
-  color: #ddd;
-  min-width: 200px;
-  box-shadow: 0px 0px 15px #FA08;
-  z-index: 1;
-}
-
-.js-drop-button:hover .js-drop-content{
-  display: block;
-}
-
-/* #endregion PÁGINA ==================================*/
-
-
-/* #region BARRA LATERAL  =========================================== */
-
-.js-side{
-  width: 200px;
-  left: 0;
-  position: fixed;
-  background-color: #222;
-  padding: 10px;
-  padding-top: 40px;
-  z-index: 0;
-  height: 90%;
-  bottom: 0;
-  overflow-y: auto;
-}
-.js-side a{
-  display: block;
-  color: #ddd;
-  padding: 10px;
-  text-decoration: none;
-  margin: 0;
-  font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
-  text-align: left;
-  font-size: medium;
-}
-.js-side p{
-  display: block;
-  color: #FA0;
-  padding: 10px;
-  text-decoration: none;
-  margin: 0;
-  font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
-  text-align: left;
-  font-size: x-large;
-  font-weight: bold;
-}
-.js-side a:hover{
-  background-color: #FA0;
-  color: black;
-}
-
-/* #endregion PÁGINA ==================================*/
-
-
-/*    BANNER  =========================================== */
-
-@keyframes banAutoPlay {
-  0% {
-    opacity: 0%;
-    z-index: 999;
-  }
-  4% {
-    opacity: 100%;
-  }
-  25% {
-    opacity: 100%;
-    z-index: 999;
-  }
-  29% {
-    opacity: 0%;
-    z-index: -1;
-  }
-  100% {
-    opacity: 0%;
-  }
-}
-
-
-.js-banner > * {
-  position: absolute;
-  animation: 32s banAutoPlay infinite ease-in-out;
-  width: 100%;
-}
-
-.js-banner > *:nth-child(1) {animation-delay: 0s}
-.js-banner > *:nth-child(2) {animation-delay: 8s}
-.js-banner > *:nth-child(3) {animation-delay: 16s}
-.js-banner > *:nth-child(4) {animation-delay: 24s}
-
-
-/* #region CONFIGURAÇÕES DO SITE ==================================================== */
-
-/* SELEÇÃO ======================== */
-::selection{
-  color: black;
-  background-color: #FA0;
-}
-::-moz-selection{
-  color: black;
-  background-color: #FA0;
-}
-
-/* BARRA DE ROLAGEM ===================== */
-/* Espessura */
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
-
-/* Fundo */
-::-webkit-scrollbar-track {
-  border: #333 1px solid;
-  background: #111;
-}
- 
-/* Barra */
-::-webkit-scrollbar-thumb {
-  background-color: #FA0; 
-  border-radius: 10px;
-  min-height: 100px;
-}
-
-/* Barra Hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #ddd; 
-}
-
-
-
-/* #endregion CONFIGURAÇÕES DO SITE ==================================*/
