--- a/css/index.css
+++ b/css/index.css
@@ -16,10 +16,12 @@
 /* #region VARIÁVEIS */
 
 :root {
-  --cinzaDark: #151015;
-  --cinzaMedio: #252020;
-  --cinzaLeve: #302520;
+  --pretoDark: #151015;
+  --pretoMedio: #252020;
+  --pretoLeve: #302520;
   --AMARELO: #FB0;
+  --cinzaMedio: #999;
+  --cinzaLeve: #DDD;
 }
 
 /* #endregion */
@@ -72,7 +74,7 @@
   top: 0;
   bottom: 0;
   position: fixed;
-  background-color: var(--cinzaMedio);
+  background-color: var(--pretoMedio);
   padding: 50px 10px 10px 10px;
   z-index: 0;
   height: 100%;
@@ -81,7 +83,7 @@
 }
 .js-side a{
   display: block;
-  color: #ddd;
+  color: var(--cinzaLeve);
   padding: 10px;
   text-decoration: none;
   margin: 0;
@@ -91,7 +93,7 @@
 }
 .js-side p{
   display: block;
-  color: VAR(--AMARELO);
+  color: var(--AMARELO);
   padding: 10px;
   text-decoration: none;
   margin: 0;
@@ -101,7 +103,7 @@
   font-weight: bold;
 }
 .js-side a:hover{
-  background-color: VAR(--AMARELO);
+  background-color: var(--AMARELO);
   color: black;
 }
 
@@ -111,7 +113,7 @@
 
 .js-nav{
   background-color: #0007;
-  border-bottom: 1px solid var(--cinzaLeve) ;
+  border-bottom: 1px solid var(--pretoLeve) ;
   backdrop-filter: blur(100px);
   width: 100%;
   display: block;
@@ -165,7 +167,7 @@
   display: none;
   position: absolute;
   background-color: #000D;
-  color: #ddd;
+  color: var(--cinzaMedio);
   min-width: 200px;
   box-shadow: 0px 0px 15px #FA08;
   z-index: 1;
@@ -179,18 +181,17 @@
 
 /* #region PÁGINA ============================================================= */
 body{
-  background-color: var(--cinzaDark);
+  background-color: var(--pretoDark);
   margin-top: 40px;
   margin: auto;
   width: 60%;
 }
 
 .js-post{
-  background-color: var(--cinzaMedio);
+  background-color: var(--pretoMedio);
   margin: 15px;
   margin-bottom: 15px;
   padding: 30px;
-  border-bottom: #FB0 1px thin;
   box-sizing: border-box;
 }
 /* #endregion PÁGINA ================================== */
@@ -199,7 +200,7 @@ body{
 p{
   font-size: x-large;
   font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
-  color: #ddd;
+  color: var(--cinzaLeve);
   text-align: justify;
 }
 hr{
@@ -224,7 +225,7 @@ h2{
   text-align: center;
 }
 h3{
-  color: #ddd;
+  color: var(--cinzaLeve);
   font-family: Baloo;
   font-weight: bold;
   font-size: 25pt;
@@ -233,7 +234,7 @@ h3{
 .js-button{
   display: inline-block;
   color: white;
-  background-color: var(--cinzaDark);
+  background-color: var(--pretoDark);
   border: var(--AMARELO) 1px solid;
   text-align: center;
   padding: 15px;
@@ -275,7 +276,7 @@ h3{
 }
 .js-table{
   margin: auto;
-  color: #ddd;
+  color: var(--cinzaLeve);
   font-size: xx-large;
   font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
   padding: 15px;
@@ -291,9 +292,6 @@ h3{
   border-bottom: #333 1px solid;
 }
 /* #endregion ================================== */
-
-
-
 
 /* #region CONFIGURAÇÕES DO SITE ==================================================== */
 
@@ -316,7 +314,7 @@ h3{
 /* Fundo da barra de roladem */
 ::-webkit-scrollbar-track {
   border: #333 1px solid;
-  background: var(--CINZADARK);
+  background: var(--PRETODARK);
 }
  
 /* Barra de roladem */
@@ -328,7 +326,7 @@ h3{
 
 /* Barra de roladem : Hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #ddd; 
+  background: var(--cinzaLeve); 
 }
 
 /* #endregion CONFIGURAÇÕES DO SITE ==================================*/
