--- a/css/index.css
+++ b/css/index.css
@@ -20,49 +20,12 @@
   --pretoMedio: #252020;
   --pretoLeve: #302520;
   --AMARELO: #FB0;
-  --cinzaMedio: #999;
+  --cinzaMedio: rgb(160, 133, 97);
   --cinzaLeve: #DDD;
+  --gradiente45: linear-gradient(45deg, rgb(255, 255, 119), rgb(170, 82, 0))1;
+  --gradiente0: linear-gradient(0deg, rgb(255, 255, 119), rgb(170, 123, 0))1;
+  --gradiente90: linear-gradient(90deg, rgb(255, 255, 119), rgb(170, 123, 0))1;
 }
-
-/* #endregion */
-
-/* #region BANNER  =========================================== */
-
-@keyframes banAutoPlay {
-  0% {
-    opacity: 0%;
-    z-index: 999;
-  }
-  4% {
-    opacity: 100%;
-  }
-  25% {
-    opacity: 100%;
-    z-index: 999;
-  }
-  29% {
-    opacity: 0%;
-    z-index: -1;
-  }
-  100% {
-    opacity: 0%;
-  }
-}
-
-
-.js-banner > * {
-  position: absolute;
-  left: 0;
-  top: 0;
-  animation: 32s banAutoPlay infinite ease-in-out;
-  width: 100%;
-  height: 100%;
-}
-
-.js-banner > *:nth-child(1) {animation-delay: 0s}
-.js-banner > *:nth-child(2) {animation-delay: 8s}
-.js-banner > *:nth-child(3) {animation-delay: 16s}
-.js-banner > *:nth-child(4) {animation-delay: 24s}
 
 /* #endregion */
 
@@ -72,12 +35,13 @@
   width: 20%;
   left: 0;
   top: 0;
+  margin-top: 40px;
   bottom: 0;
   position: fixed;
   background-color: var(--pretoMedio);
   padding: 50px 10px 10px 10px;
   z-index: 0;
-  height: 100%;
+  height: 100% - 40px;
   overflow-y: auto;
   box-sizing: border-box;
 }
@@ -112,9 +76,9 @@
 /* #region MENU DE NAVEGAÇÃO  =========================================== */
 
 .js-nav{
-  background-color: #0007;
-  border-bottom: 1px solid var(--pretoLeve) ;
-  backdrop-filter: blur(100px);
+  background-color: #0002;
+  backdrop-filter: blur(50px);
+  box-shadow: 5px 0px 15px #FB08;
   width: 100%;
   display: block;
   top: 0;
@@ -141,6 +105,7 @@
 
 .js-nav li{
   float: left;
+  list-style: none;
 }
 
 .js-nav a{
@@ -182,17 +147,73 @@
 /* #region PÁGINA ============================================================= */
 body{
   background-color: var(--pretoDark);
-  margin-top: 40px;
-  margin: auto;
+}
+.js-page{
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
   width: 60%;
 }
-
 .js-post{
   background-color: var(--pretoMedio);
   margin: 15px;
-  margin-bottom: 15px;
   padding: 30px;
   box-sizing: border-box;
+}
+.js-post-frame{
+  border: none;
+  display: none;
+}
+.js-footer{
+  background-color: #0002;
+  backdrop-filter: blur(40px);
+  width: 100%;
+  border: 1px solid;
+  border-image: var(--gradiente45);
+  padding: 30px;
+  box-sizing: border-box;
+  bottom: 0;
+}
+.js-footer table{
+  margin: auto;
+  width: fit-content;
+  padding: 15px;
+}
+.js-footer par{
+  display: block;
+  color: var(--cinzaLeve);
+  font-size: small;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding-top: 10px;
+}
+.js-footer par:hover{
+  color: var(--AMARELO);
+  cursor: pointer;
+}
+.js-footer tit{
+  display: block;
+  color: var(--cinzaMedio);
+  font-size: large;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.js-footer td{
+  padding: 5px 50px 5px 50px;
+  vertical-align: top;
+}
+.btnUp {
+  width: 50px;
+  height: 50px;
+  fill: #DDD3;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
+}
+.btnUp:hover {
+  width: 60px;
+  height: 60px;
+  fill: #FB0;
+  margin: 5px;
 }
 /* #endregion PÁGINA ================================== */
 
@@ -205,8 +226,8 @@ p{
 }
 hr{
   border-width: 1px 0 0 0;
-  border-color: #FB0;
-  margin: 20px auto 20px auto;
+  border-image: var(--gradiente45);
+  margin: 5px;
 }
 h1{
   color: var(--AMARELO);
@@ -235,13 +256,16 @@ h3{
   display: inline-block;
   color: white;
   background-color: var(--pretoDark);
-  border: var(--AMARELO) 1px solid;
+  border: 1px solid;
+  border-image: var(--gradiente45);
   text-align: center;
   padding: 15px;
   text-decoration: none;
   font-weight: bold;
   font-size: large;
   font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 .js-button:hover{
   color: black;
@@ -249,7 +273,8 @@ h3{
 }
 .notas{
   color: var(--AMARELO);
-  border: var(--AMARELO) 1px solid;
+  border: 1px solid;
+  border-image: var(--gradiente45);
   text-align: right;
   font-weight: bold;
   font-size: x-large;
@@ -272,24 +297,35 @@ h3{
   margin-bottom: 50px;
   display: block;
   pointer-events: none;
-  border: var(--AMARELO) 1px solid;
+  border: 1px solid;
+  border-image: var(--gradiente45);
 }
 .js-table{
   margin: auto;
   color: var(--cinzaLeve);
-  font-size: xx-large;
+  font-size: x-large;
   font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
   padding: 15px;
 }
 .js-table th{
   color: VAR(--AMARELO);
   padding: 5px 30px 5px 30px;
-  border-bottom: VAR(--AMARELO) 1px solid;
+  border-bottom: 1px solid var(--AMARELO);
   text-align: left;
 }
 .js-table td{
   padding: 5px 30px 5px 30px;
   border-bottom: #333 1px solid;
+}
+li{
+  font-size: x-large;
+  font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
+  color: var(--cinzaLeve);
+  text-align: justify;
+  list-style: "\261B";
+}
+a{
+  cursor: pointer;
 }
 /* #endregion ================================== */
 
@@ -314,19 +350,22 @@ h3{
 /* Fundo da barra de roladem */
 ::-webkit-scrollbar-track {
   border: #333 1px solid;
-  background: var(--PRETODARK);
+  background: transparent;
 }
  
 /* Barra de roladem */
 ::-webkit-scrollbar-thumb {
-  background-color: var(--AMARELO); 
+  background-color: #FFF3;
   border-radius: 10px;
   min-height: 100px;
 }
 
 /* Barra de roladem : Hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--cinzaLeve); 
+  background: var(--AMARELO);
 }
 
 /* #endregion CONFIGURAÇÕES DO SITE ==================================*/
+
+
+
