--- a/css/index.css
+++ b/css/index.css
@@ -201,8 +201,8 @@ body{
   vertical-align: top;
 }
 .btnUp {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   fill: #DDD3;
   position: fixed;
   bottom: 0;
@@ -210,8 +210,8 @@ body{
   margin: 10px;
 }
 .btnUp:hover {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   fill: #FB0;
   margin: 5px;
 }
@@ -283,7 +283,7 @@ h3{
   margin: 10px 0px 10px 180px;
   padding: 30px;
 }
-.codigo{
+.codigo, code{
   color: cyan;
   font-size: large;
   font-family: Tech, 'Courier New', Courier, monospace;
