--- a/css/index.css
+++ b/css/index.css
@@ -302,9 +302,10 @@
   height: 40px;
   fill: var(--cinzaMedio);
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 10;
+  right: 10;
   margin: 10px;
+  box-sizing: border-box;
 }
 @keyframes btnUpMotiom {
   from {
