--- a/css/index.css
+++ b/css/index.css
@@ -260,6 +260,7 @@
 
 /* #region RODAPÉ */
 .js-footer{
+  padding: 20px;
   background-color: var(--pretoDark);
   backdrop-filter: blur(10px);
   width: 100%;
@@ -267,7 +268,7 @@
   border-image: var(--gradiente45);
   display: flex;
   flex-wrap: wrap;
-  justify-content: stretch;
+  justify-content: space-around;
   box-sizing: border-box;
   margin: 0;
   bottom: 0;
@@ -293,7 +294,6 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .js-footer div{
-  padding: 25px;
   vertical-align: top;
   flex-basis: 300px;
   flex-grow: 100%;
@@ -348,6 +348,7 @@ body{
 .js-post{
   background-color: var(--pretoMedio);
   padding: 30px;
+  margin: 0;
   box-sizing: border-box;
   border: var(--pretoLeve) 1px solid;
 }
@@ -546,14 +547,16 @@ a{
     background-color: var(--black);
   }
   .js-footer {
-    padding: 20px;
     flex-direction: column;
     justify-content: stretch;
   }
   .js-footer div {
     padding: 0px 15px 0px 15px;
   }
-  .js-page { width: 100%;}
+  .js-page {
+    width: 100%;
+    margin: 0;
+  }
 }
 body {
   width: 100%;
