--- a/css/index.css
+++ b/css/index.css
@@ -72,6 +72,7 @@
 .js-side-left a:hover{
   background-color: var(--AMARELO);
   color: var(--black);
+  transition-duration: 500ms;
 }
 
 .js-index-toggle {
@@ -91,6 +92,7 @@
 .js-index-icon:hover div, .js-index-icon:active div {
   background-color: var(--black) !important;
   cursor: pointer;
+  transition-duration: 500ms;
 }
 .js-index-icon {
   padding: 5px;
@@ -310,27 +312,14 @@
   position: fixed;
   bottom: 0;
   right: 0;
+  transition-duration: 500ms;
 }
-@keyframes btnUpMotiom {
-  from {
-    width: 40px;
-    height: 40;
-    margin: 10px;
-    fill: var(--white);
-  }
-  to {
-    width: 50px;
-    height: 50px;
-    margin: 5px;
-    fill: var(--AMARELO);
-  }
-}
+
 .btnUp:hover {
-  animation-name: btnUpMotiom;
-  animation-duration: 500ms;
-  animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  animation-iteration-count: 6;
-  animation-direction: alternate;
+  fill: var(--AMARELO);
+  width: 50px;
+  height: 50px;
+  margin: 5px;
   cursor: pointer;
 }
 /* #endregion */
@@ -408,6 +397,7 @@ hr{
   font-family: Hubballi, Calibri, 'Trebuchet MS', sans-serif;
   box-sizing: border-box;
   cursor: pointer;
+  transition-duration: 600ms;
 }
 .js-button:hover{
   color: var(--black);
